Bug 428795 - Powerdevil won't launch anymore since 5.20.0 when using musl instead of glibc
Summary: Powerdevil won't launch anymore since 5.20.0 when using musl instead of glibc
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Power management & brightness (other bugs)
Version First Reported In: 5.20.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-07 18:24 UTC by Bart Ribbers
Modified: 2025-05-17 10:31 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4
Sentry Crash Report:


Attachments
Plasma session log (39.75 KB, text/plain)
2020-12-15 17:09 UTC, Bart Ribbers
Details
Attached is the first photo. (364.68 KB, image/jpeg)
2025-05-17 08:04 UTC, Victor Ryzhykh
Details
Attached is a second photo. (414.21 KB, image/jpeg)
2025-05-17 08:05 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2020-11-07 18:24:39 UTC
SUMMARY
Since Plasma 5.20.0, powerdevil won't start anymore and thus doesn't try to keep my space awake or reports about the battery level of my laptop. Trying to launch it manually (which previously worked fine in case of it crashing, which it would like to do sometimes) gives me "Session bus not found\nTo circumvent this problem try the following command (with Linux and bash)\nexport $(dbus-launch)"


STEPS TO REPRODUCE
1. Get an Alpine Linux system
2. Start a Plasma session
3. Check if powerdevil is running

OBSERVED RESULT
Powerdevil isn't running and won't be launched manually.

EXPECTED RESULT
Powerdevil to launch normally.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Alpine Linux edge
(available in About System)
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
This is an Alpine Linux system and thus based on Musl rather than glibc.
Comment 1 Nate Graham 2020-11-09 18:21:25 UTC
> Session bus not found
Seems like a problem.
Comment 2 Bart Ribbers 2020-11-09 21:56:36 UTC
Yes it definitely is a problem ;) D-Bus itself is however running fine, and besides Powerdevil I don't notice anything else broken that might be related to the system session bus not being present.
Comment 3 Bart Ribbers 2020-12-15 17:09:50 UTC
Created attachment 134099 [details]
Plasma session log

So the same packages are used to run Plasma Mobile on postmarketOS as well and I noticed Powerdevil is running fine there. The main difference I could see is that the mobile session is launched with "dbus-run-session" where the desktop session isn't, but changing that didn't make Powerdevil launch.

I've checked the SDDM log but didn't see much useful besides the session bus not being found message. Maybe the log is useful for others however.
Comment 4 Bart Ribbers 2021-02-01 18:42:11 UTC
Ok this is probably not a Powerdevil issue but something else, and Powerdevil not launching is a sympton of it. I just noticed the Night Color KCM fails to connect to the window manager, which I assume has the same cause. And here I was wondering why my screen didn't look any different in the evening as on bright day...

I don't know what component this bug applies too then
Comment 5 Bart Ribbers 2021-11-11 07:09:50 UTC
Powerdevil has the same problem as kwin does for me in https://bugs.kde.org/show_bug.cgi?id=417227, and the workaround from there worked here too. Meaning I have had a working Powerdevil for quite a while again, but by removing Powerdevil's capabilities (most notably CAP_WAKE_ALARM).
Comment 6 Harald Sitter 2022-09-20 11:09:29 UTC
I feel like this needs taking up with musl and/or dbus upstream. The way I understand it we have this capability specifically for plasma mobile, so we can't just get rid of it.
Comment 7 Nate Graham 2024-12-18 21:38:48 UTC
Is this still happening in a recent version of Plasma 6?
Comment 8 Bug Janitor Service 2025-01-02 03:47:21 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 9 Bug Janitor Service 2025-01-17 03:47:59 UTC
๐Ÿ›๐Ÿงน This bug has been in NEEDSINFO status with no change for at least 30 days. Closing as RESOLVED WORKSFORME.
Comment 10 Bart Ribbers 2025-01-20 08:24:58 UTC
Sorry for the late response, yes this is still happening. The only way to get it running is by removing it's capabilities entirely. The same issue used to happen with kwin and I had to remove the capabilities there as well but it seems to have been resolved since because nowadays the packaging doesn't require that anymore. Not sure if the actual problem was resolved or the capabilities just weren't needed any more.

Interesting that it's required specifically by Plasma Mobile, because postmarketOS is atm the biggest Plasma Mobile using distro and it's broken there.
Comment 11 Bug Janitor Service 2025-01-21 15:56:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/497
Comment 12 Victor Ryzhykh 2025-05-16 13:45:10 UTC
(In reply to Bug Janitor Service from comment #11)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/powerdevil/-/merge_requests/497

Power management has become completely unavailable.
I added to the spec the parameter %caps(cap_wake_alarm=+ep) %{_kde6_libexecdir}/org_kde_powerdevil
It had no effect at all.
I had to roll back this patch by building the package with the parameter %patch1 -p1 -R
Comment 13 Bhushan Shah 2025-05-16 15:31:43 UTC
Sorry I did not get you, is this with Plasma 6.3.90 ?

Can you provide more info on release you are using and distribution?
Comment 14 Victor Ryzhykh 2025-05-17 08:04:06 UTC
Created attachment 181412 [details]
Attached is the first photo.

(In reply to Bhushan Shah from comment #13)
> Sorry I did not get you, is this with Plasma 6.3.90 ?
> 
> Can you provide more info on release you are using and distribution?

Here is my system.
Power management is not working.
Attached is the first photo.
Comment 15 Victor Ryzhykh 2025-05-17 08:05:14 UTC
Created attachment 181413 [details]
Attached is a second photo.

Then I open the file /usr/lib/systemd/user/plasma-powerdevil.service in a text editor.
In it, I commented out the line 
#AmbientCapabilities=CAP_WAKE_ALARM.
I reboot the system and power management works.
Attached is a second photo.
Comment 16 Bhushan Shah 2025-05-17 08:31:17 UTC
Can you tell me what version of systemd you have?
Comment 17 Victor Ryzhykh 2025-05-17 09:12:47 UTC
(In reply to Bhushan Shah from comment #16)
> Can you tell me what version of systemd you have?

systemd-256.11
Comment 18 Bhushan Shah 2025-05-17 09:44:08 UTC
Okay, unfortunately due to upstream systemd issue, you need to revert a patch: https://community.kde.org/Distributions/Packaging_Recommendations#Powerdevil_package_configuration

Please see this.
Comment 19 Victor Ryzhykh 2025-05-17 10:31:04 UTC
(In reply to Bhushan Shah from comment #18)
> Okay, unfortunately due to upstream systemd issue, you need to revert a
> patch:
> https://community.kde.org/Distributions/
> Packaging_Recommendations#Powerdevil_package_configuration
> 
> Please see this.

Got it. Thank you.