daemon: do not do setcap on executable

Instead use cap_set_proc to acquire CAP_WAKE_ALARM later on, this might
help circumvent issue on musl libc with _dbus_check_setuid and
issetugid.

BUG: 428795